<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/StatusBluetooth"
        android:layout_width="156dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/StatusBluetoothDisconnected"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCharacteristicUUID" />

    <TextView
        android:id="@+id/displayValue"
        android:layout_width="127dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/defaultBluetoothValue"
        android:textColor="@color/colorAccentRed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StatusBluetooth"
        app:layout_constraintTop_toTopOf="@+id/StatusBluetooth" />

    <Button
        android:id="@+id/BluetoothButtonConnection"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccentBlue"
        android:onClick="onclickConnection"
        android:text="@string/bluetoothConnect"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editNameBluetoothDevice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCharUUID"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/NameCharacteristicUUID"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/StatusBluetooth"
        app:layout_constraintEnd_toStartOf="@+id/editCharacteristicUUID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameBluetoothDevice" />

    <EditText
        android:id="@+id/editNameBluetoothDevice"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="@color/colorAccentRed"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/defaultDeviceName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/defaultDeviceName"
        android:textColor="@color/colorPrimaryWhite"
        app:layout_constraintEnd_toStartOf="@+id/BluetoothButtonConnection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCharacteristicUUID"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccentRed"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/DefaultUUID"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/DefaultUUID"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/StatusBluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nameCharUUID"
        app:layout_constraintTop_toBottomOf="@+id/BluetoothButtonConnection" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryWhite"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatusBluetooth"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/asciiArtZoydberg"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>